salsa-2022-tests/tests/compile-fail/tracked_struct_incompatibles.stderr
error: `return_ref` option not allowed here
  --> tests/compile-fail/tracked_struct_incompatibles.rs:13:29
   |
13 | #[salsa::tracked(jar = Jar, return_ref)]
   |                             ^^^^^^^^^^

error: `specify` option not allowed here
  --> tests/compile-fail/tracked_struct_incompatibles.rs:18:29
   |
18 | #[salsa::tracked(jar = Jar, specify)]
   |                             ^^^^^^^

error: `no_eq` option not allowed here
  --> tests/compile-fail/tracked_struct_incompatibles.rs:23:29
   |
23 | #[salsa::tracked(jar = Jar, no_eq)]
   |                             ^^^^^

error: `db` option not allowed here
  --> tests/compile-fail/tracked_struct_incompatibles.rs:28:29
   |
28 | #[salsa::tracked(jar = Jar, db = Db)]
   |                             ^^

error: unrecognized option `recover_fn`
  --> tests/compile-fail/tracked_struct_incompatibles.rs:33:29
   |
33 | #[salsa::tracked(jar = Jar, recover_fn = recover)]
   |                             ^^^^^^^^^^

error: `lru` option not allowed here
  --> tests/compile-fail/tracked_struct_incompatibles.rs:38:29
   |
38 | #[salsa::tracked(jar = Jar, lru =12)]
   |                             ^^^

error[E0412]: cannot find type `TrackedWithRetRef` in this scope
 --> tests/compile-fail/tracked_struct_incompatibles.rs:3:5
  |
3 |     TrackedWithRetRef,
  |     ^^^^^^^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `TrackedStructWithSpecify` in this scope
 --> tests/compile-fail/tracked_struct_incompatibles.rs:4:5
  |
4 |     TrackedStructWithSpecify,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `TrackedStructWithNoEq` in this scope
 --> tests/compile-fail/tracked_struct_incompatibles.rs:5:5
  |
5 |     TrackedStructWithNoEq,
  |     ^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `TrackedStructWithDb` in this scope
 --> tests/compile-fail/tracked_struct_incompatibles.rs:6:5
  |
6 |     TrackedStructWithDb,
  |     ^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `TrackedStructWithRecover` in this scope
 --> tests/compile-fail/tracked_struct_incompatibles.rs:7:5
  |
7 |     TrackedStructWithRecover,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `TrackedStructWithLru` in this scope
 --> tests/compile-fail/tracked_struct_incompatibles.rs:8:5
  |
8 |     TrackedStructWithLru,
  |     ^^^^^^^^^^^^^^^^^^^^ not found in this scope
